# pomidaq-timelapse

./: README.md  ffmpegcommand.txt  redirect_test.py
miniscope_holder_3D_model/: miniscope holder - base v3.stl  miniscope holder niko's version v13.f3d
py/: CMakeLists.txt  example.py  pyminiscope.cpp  timelapse.py
scratch/: buffer_test.py  foo.txt  miniscope_symbol_table.txt  redirect.stderr  redirect_test.py  rename_direcs.py  timelapse.stderr  timelapse.stdout
timelapse/: README.md  logger_test.py  mscopecontrol.py  mscopesetup.py  mscopeutil.py  run_timelapse.sh  timelapse.py  timelapse_vidstitch.py
